--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     animation: fadeInFondo 4s ease-in-out;
+    flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
   }
   
   @keyframes fadeInFondo {
@@ -54,6 +57,8 @@
     font-family: "BattlesbridgeDemoRegular", sans-serif;
   }
   h2{
+    margin-top: 20px;
+    margin-bottom: 15px;
     font-family: "BattlesbridgeDemoRegular", sans-serif;
     text-align: center;
     color: #f3efe8;
@@ -73,8 +78,10 @@
   }
   
   main {
+    flex: 1;
     max-width: 600px;
     margin: 0 auto;
+    width: 100%;
   }
   
   .turno-lista {
@@ -83,6 +90,23 @@
     gap: 10px;
     margin-top: 20px;
     
+  }
+  @media (max-width: 600px) {
+    h1 {
+      font-size: 2rem;
+      padding-block: 30px;
+    }
+  
+    .turno {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .btn-agendar {
+      margin-top: 5px;
+      width: 100%;
+      text-align: center;
+    }
   }
   
   .turno {
@@ -93,6 +117,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+  #turno-actual {
+    margin-top: 20px;
+    text-align: center;
+    position: static; 
+    font-size: 1.1rem;
+    color: #b1aaaa;
   }
   
   .turno.disponible {
@@ -160,4 +191,7 @@
     align-items: center;
     font-size: 0.9rem;
     margin-top: auto;
+    text-align: center;
+  padding: 10px;
+
   }
