--- a/stylelogin.css
+++ b/stylelogin.css
@@ -7,6 +7,9 @@
   body {
     height: 100vh;
     display: flex;
+    flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
     justify-content: center;
     align-items: center;
     background-image: url('barberia2.jpg');
